# django-presigned-url

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: tests.yml
django_presigned_url/tests/: test_presigned_urls.py
